src/test/resources/purescript_examples/failing/EmptyCase.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ErrorParsingModule\n')
  PsiElement(module)('module')
  PsiElement(whitespace)(' ')
  PSASTWrapperElement(Qualified)
    PSASTWrapperElement(ModuleName)
      PsiElement(proper name)('Main')
  PsiElement(whitespace)(' ')
  PsiElement(where)('where')
  PsiElement(whitespace)('\n\n')
  PsiElement(identifier)('error')
  PsiElement(whitespace)(' ')
  PsiElement(identifier)('err')
  PsiElement(whitespace)(' ')
  PSASTWrapperElement(NamedBinder)
    <empty list>
  PsiElement(=)('=')
  PsiElement(whitespace)(' ')
  PsiElement(case)('case')
  PsiElement(whitespace)(' ')
  PSASTWrapperElement(Value)
    PSASTWrapperElement(PrefixValue)
      PSASTWrapperElement(Var)
        PSASTWrapperElement(Qualified)
          PsiElement(identifier)('err')
          PsiElement(whitespace)(' ')
  PsiElement(of)('of')
  PsiElement(whitespace)(' ')
  PSASTWrapperElement(Value)
    PSASTWrapperElement(PrefixValue)
      PsiElement(\)('\')
      PSASTWrapperElement(Abs)
        PsiElement(identifier)('_')
        PsiElement(whitespace)(' ')
      PsiElement(->)('->')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Value)
        PSASTWrapperElement(PrefixValue)
          PSASTWrapperElement(NumericLiteral)
            PsiElement(natural)('1')
            PsiElement(whitespace)('\n')
